--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
- body{
-	font-family: Helvetica Neue;
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap');
+body{
+	font-family: 'Open Sans', sans-serif;
 	font-size: 15px;
 	color: #444;
 	 font-weight: 300;
@@ -162,4 +163,138 @@ header h1{
 .project:hover .project-info{
 	opacity: 1;
 	transition: all 0.3s ease-in-out;
+}
+.overlay{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.60);
+	top: 0;
+}
+.project-icon{
+	position: absolute;
+	top: 0;
+	right: 0;
+	z-index: 999;
+	padding: 5px;
+}
+.project-icon h4{
+	color: black;
+	font-size: 16px;
+	font-weight: 300;
+}
+.img-gris:hover img{
+	filter: grayscale(1);
+}
+.color{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 20%;
+	background-color: black;
+	
+}
+.color h4{
+	color: white;
+	text-align: center;
+	z-index: 999;
+	padding: 5px 0 0;
+	font-weight: 300;
+}
+.azul{
+	background-color: rgba(2,0,255,0.60);
+}
+#info-footer{
+	background-color: #3d3f3e;
+	color: #a2a2a2;
+	padding: 20px 0px;
+}
+#info-footer h4{
+	font-size: 14px;
+	text-transform: uppercase;
+	color: #dfdfdf;
+	margin-bottom: 25px;
+}
+.Redes i{
+	background-color: #464646;
+	color: #fff;
+	width: 45px;
+	height: 45px;
+	line-height: 45px;
+	text-align: center;
+	border-radius: 100%;
+	transition: all 0.5s ease-in-out;
+}
+.Redes i:hover{
+	background-color: #d80808;
+	transition: all 0.5s ease-in-out;
+}
+#copyright{
+	background-color: #2c2e2e;
+	color: #888;
+	padding: 10px 0px;
+	font-size: 12px;
+}
+#copyright a{
+	color: #888;
+}
+#copyright{
+	color: #fff;
+}
+#hero-contact{
+	background-image: url("../img/Oshine-Arquitect-9/bg-contact.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	min-height: 60vh;
+}
+.section{
+	padding: 60px 0;
+}
+.icon-up{
+	position: relative;
+	background-color: #f2f4f8;
+	height: 200px;
+	overflow: hidden;
+}
+.icono{
+	display: grid;
+	align-content: center;
+	text-align: center;
+	color: #d80808;
+	font-size: 40px;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	transition: all 0.3s ease-in;
+}
+.texto{
+	display: grid;
+	align-content: center;
+	text-align: center;
+	opacity: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 100%;
+	transition: all 0.3s ease-in;
+}
+.icon-up:hover .icono{
+	opacity: 0;
+	transition: all 0.3s ease-in;
+	top: -100%;
+}
+.icon-up:hover .texto{
+	opacity: 1;	
+	top: 0;
+	transition: all 0.3s ease-in;
+}
+#map{
+	width: 100%;
+	height: 400px;
+}
+.form-control{
+	background-colo: #f2f4f8;
+	border-radius: 0;
+	border: 0;
 }
